--- a/public/css/app.css
+++ b/public/css/app.css
@@ -36857,6 +36857,15 @@ table tbody tr td:after {
     height: 4px;
     display: block;
   }
+  html, body {
+    height: initial !important;
+    overflow: initial !important;
+    -webkit-print-color-adjust: exact;
+  }
+  @page {
+    size: auto;
+    margin: 10mm;
+  }
 }
 .txt-upper {
   text-transform: uppercase !important;
@@ -36927,4 +36936,14 @@ table.print-friendly tr td, table.print-friendly tr th {
 tr td {
   page-break-inside: avoid;
   white-space: nowrap;
+}
+
+.tla-print-header {
+  display: flex;
+  justify-content: space-around;
+  font-size: 13px;
+}
+
+.print-company-name {
+  font-size: 16px;
 }
